Migrar a GenApp 2.0 #686 (icones i warnings de compilació)